--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "polls api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "babel src --presets babel-preset-es2015 --out-dir lib"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "babel": {
     "presets": [
